Misc updates and fixes
updated Red Hat URLs, various file permissions, DNS servers, etc.

--- a/roles/setup_openshift4/tasks/main.yml
+++ b/roles/setup_openshift4/tasks/main.yml
@@ -41,6 +41,7 @@
   copy:
     src: /opt/ocp4/{{item}} 
     dest: /var/www/html/ignition/
+    mode: 644
     remote_src: yes
   with_items: 
     ['master.ign', 'bootstrap.ign', 'worker.ign']
