--- a/roles/create_helper_kvm/tasks/create_kvm.yml
+++ b/roles/create_helper_kvm/tasks/create_kvm.yml
@@ -24,6 +24,9 @@
     virt-resize --expand /dev/sda1 /var/lib/libvirt/images/{{ kvm_vm_base_img }}
     /var/lib/libvirt/images/{{ kvm_vm_os_disk_name }}.qcow2
   register: resize_os_disk_results
+  #changed_when: '"Resize operation completed with no errors" in resize_os_disk_results.stdout'
+
+- debug: msg={{ resize_os_disk_results.stdout }}
   changed_when: '"Resize operation completed with no errors" in resize_os_disk_results.stdout'
 
 - name: Grow root file system to size of disk
@@ -34,10 +37,9 @@
 - name: Set the root password for the vm and uninstall cloud-init
   command: > 
     virt-customize -a /var/lib/libvirt/images/{{ kvm_vm_os_disk_name }}.qcow2
-    --root-password password:{{ kvm_vm_root_pwd }} --uninstall cloud-init
+    --root-password password:{{ kvm_vm_root_pwd }} --uninstall cloud-init --ssh-inject {{ lookup('env','LOGNAME') }}:file:{{ lookup('env','HOME') }}/.ssh/id_rsa.pub 
   register: mod_os_disk_results
   changed_when: '"Finishing off" in mod_os_disk_results.stdout'
-
 
 - name: Set the hostname for the vm and uninstall cloud-init
   command: > 
@@ -45,8 +47,6 @@
     --hostname {{ kvm_vm_hostname }} 
   register: mod_os_host_results
   
-
-
 - name: Create the ifcfg files for vm
   template:
     src: ifcfg.j2
